do not stretch icons (bug 721331)

--- a/media/css/impala/hovercards.less
+++ b/media/css/impala/hovercards.less
@@ -165,8 +165,8 @@
             border-color: transparent;
             img {
                 margin: 8px;
-                width: 32px;
-                height: 32px;
+                max-width: 32px;
+                max-height: 32px;
                 border: 0;
                 padding: 0;
             }
