--- a/media/css/impala/listing.less
+++ b/media/css/impala/listing.less
@@ -209,8 +209,8 @@
             display: block;
             position: absolute;
             left: 25px;
-            height: 32px;
-            width: 32px;
+            max-height: 32px;
+            max-width: 32px;
         }
         .author {
             color: @medium-gray;
